--- a/learningshopts/src/index.css
+++ b/learningshopts/src/index.css
@@ -8,3 +8,15 @@
 .signup-link{
     text-align: center;
 }
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: black;
+}
