--- a/learningshopts/src/index.css
+++ b/learningshopts/src/index.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+    margin: 0;
+  }
 .login-box{
     align-items: center;
 }
@@ -9,14 +13,20 @@
     text-align: center;
 }
 
+.bt-root-div{
+    display: flex;
+    flex-direction: column;
+}
+
+.bt-child-wrapper{
+    flex: 1;
+}
+
 .footer{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
     background-color: black;
 }
